@@ -15,8 +15,10 @@
         <module>client</module>
     </modules>
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <grpc.version>1.32.2</grpc.version>
         <protobuf.verion>3.9.1</protobuf.verion>
         <opencensus.version>0.27.1</opencensus.version>
@@ -30,6 +32,8 @@
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
         <mockito.version>3.3.3</mockito.version>
         <google.truth.version>1.0.1</google.truth.version>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>   
+        <maven-failsafe-plugin.version>3.0.0-M6</maven-failsafe-plugin.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -197,19 +201,61 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
+         
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>${maven-surefire-plugin.version}</version>
-                    <configuration>
-                        <argLine>-Xmx1g</argLine>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>${argLine} --add-opens
+              java.base/java.lang.reflect=ALL-UNNAMED --add-exports
+              java.base/sun.nio.ch=ALL-UNNAMED</argLine>
+            <reuseForks>false</reuseForks>
+            <forkCount>1</forkCount>
+           </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-failsafe-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <configuration>
+            <tagNameFormat>v@{project.version}</tagNameFormat>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${jacoco-maven-plugin.version}</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>prepare-agent</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>report</id>
+              <phase>prepare-package</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+      </plugins>
+      <pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
+          </plugin>
+        </plugins>
+      </pluginManagement>
     </build>
 
 </project>
